--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>ERİNÇ'İN KANALI</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,10 +28,10 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
-								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
-								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
+								<li><a href="#top" id="top-link"><span class="icon solid fa-home">ANA SAYFA</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">YERLİ FİLM</span></a></li>
+								<li><a href="#about" id="about-link"><span class="icon solid fa-user">YABANCI FİLM</span></a></li>
+								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">İLETİŞİM</span></a></li>
 							</ul>
 						</nav>
 
